<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_make_memo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.trustring.memoappv10.MakeMemoActivity">

        <EditText
            android:id="@+id/dtxTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/background"
            android:hint="@string/Memo_Name_hint"
            android:lines="1"
            android:padding="2dp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/dtxDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/background"
            android:hint="@string/Memo_Describe_hint"
            android:lines="2"
            android:padding="2dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnLoadImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/Memo_Load_image" />

                <Button
                    android:id="@+id/btnUnLoadImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Memo_UnLoad_image" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_alignParentRight="true"
                android:background="@drawable/background" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:orientation="vertical"
            android:padding="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FROM"
                android:lines="1"
                android:layout_marginRight="5dp"/>
            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:lines="1"
                android:text="2012/12/12 12:00AM"
                android:onClick="onClick"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TO"
                android:lines="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:id="@+id/tvTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:lines="1"
                android:text="2012/12/12 12:00AM"
                android:onClick="onClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Memo_Even_color" />

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpload"
            android:text="UP Load"
            android:onClick="onClick"/>
    </LinearLayout>
</ScrollView>